--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
   </style>
 </head>
 <body class="bg-light">
-  <div id="spinner" class="d-flex">
+  <div id="spinner">
     <div class="spinner-border text-primary" role="status"><span class="visually-hidden">Loading...</span></div>
   </div>
   <div class="container py-5" x-data>
