--- a/templates/question.html
+++ b/templates/question.html
@@ -14,7 +14,15 @@
   </style>
 </head>
 <body class="bg-light" x-data>
-  <div id="spinner" class="d-flex">
+  <!-- Top Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <div class="container-fluid">
+      <img src="/static/logo.png" alt="Logo" height="32">
+      <span class="navbar-brand mx-auto">Ari & Rishu's SAT Prep APP</span>
+      <span></span>
+    </div>
+  </nav>
+  <div id="spinner">
     <div class="spinner-border text-primary" role="status"><span class="visually-hidden">Loading...</span></div>
   </div>
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
